preparing for routing

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,8 @@
 </head>
 <body>
   <div class="container">
-    <app-product-list></app-product-list>
+    <!-- <app-product-list></app-product-list> -->
+     <app-root></app-root>
   </div>
 </body>
 </html>
